# pico-experiments

./: CMakeLists.txt  README.md  example_auto_set_url.cmake
lcd-hello-world/: CMakeLists.txt  lcd-hello-world.c
python-lcd-hello-world/: main.py
